force-app/src/objects/Loan_Charge__c/Loan_Charge__c.object-meta.xml
<CustomObject>
    <label>Loan Charge</label>
    <nameField>
        <displayFormat>LC-{00000}</displayFormat>
        <label>Loan Charge Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Loan Charges</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>