force-app/src/objects/Loan_Charge__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <description>The date when the charge was applied.</description>
    <label>Charge Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>