force-app/src/objects/Loan_Charge__c/fields/Loan__c.field-meta.xml
<CustomField>
    <fullName>Loan__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Loan</label>
    <referenceTo>Loan__c</referenceTo>
    <relationshipLabel>Loan Charges</relationshipLabel>
    <relationshipName>Loan_Charges</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>